# TurDB

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  TARGET_BENCH.md
.claude/: HNSW.md  MISSING_FEATURES.md  MVCC.md  QUERY_PLANNER.md  claude.md  feature-list.json  migration.md  pending-funcs.json  pending-list.json  settings.local.json
.claude/hooks/: pre-edit.sh  pre-write.sh  session-start.sh  test-reminder.sh
.claude/rules/: ENCODING.md  ERRORS.md  FILE_FORMATS.md  MEMORY.md  STYLE.md  TESTING.md
.github/workflows/: claude-code-review.yml
benches/: btree.rs  database.rs  encoding.rs  insertion.rs  records.rs  sql_operators.rs  string_constraints.rs
docs/plans/: 2025-12-15-mvcc-transaction-integration.md  2025-12-15-outer-join-design.md  2026-01-08-hnsw-integration-design.md
examples/: profile_insert.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_array.rs  fuzz_decoder.rs  fuzz_record_builder.rs
scripts/: lint-inline-comments.sh  lint-unsafe-safety.sh  lint-unwrap-panic.sh  setup-hooks.sh
src/: database.rs  lib.rs  macros.rs  record.rs  types.rs
src/btree/: interior.rs  leaf.rs  mod.rs  overflow_value.rs  repro_test.rs  reproduction_test.rs  simd_scan.rs  tree.rs
src/cli/: commands.rs  history.rs  mod.rs  repl.rs  table.rs
src/config/: constants.rs  mod.rs
src/constraints/: mod.rs
src/database/: batch.rs  builder.rs  config.rs  convert.rs  database.rs  ddl.rs  dirty_tracker.rs  group_commit.rs  lifecycle.rs  macros.rs  mod.rs  owned_value.rs  page_locks.rs  pragma.rs  prepared.rs  recovery.rs  row.rs  timing.rs  toast.rs  transaction.rs
src/database/dml/: delete.rs  fast_load.rs  insert.rs  mod.rs  mvcc_helpers.rs  update.rs
src/database/query/: helpers.rs  mod.rs  set_ops.rs
src/encoding/: key.rs  mod.rs  varint.rs
src/hnsw/: distance.rs  mod.rs  operations.rs  quantization.rs  search.rs  storage.rs
src/memory/: budget.rs  mod.rs  page_buffer.rs
src/mvcc/: mod.rs  record_header.rs  table.rs  transaction.rs  undo_manager.rs  undo_page.rs  version.rs
src/parsing/: json.rs  literal.rs  mod.rs
src/records/: array.rs  builder.rs  composite.rs  jsonb.rs  mod.rs  schema.rs  tests.rs  types.rs  view.rs
src/schema/: catalog.rs  mod.rs  persistence.rs  system_tables.rs  table.rs
src/sql/: adapter.rs  ast.rs  builder.rs  context.rs  decoder.rs  executor.rs  expr.rs  lexer.rs  mod.rs  mvcc_scan.rs  parser.rs  partition_spiller.rs  planner.rs  predicate.rs  row_serde.rs  state.rs  token.rs  util.rs
src/sql/functions/: datetime.rs  mod.rs  numeric.rs  string.rs  system.rs
src/sql/optimizer/: bounds.rs  cost.rs  index_selection.rs  join_analysis.rs  mod.rs
src/storage/: cache.rs  driver.rs  file_manager.rs  freelist.rs  headers.rs  mmap.rs  mod.rs  opfs.rs  overflow.rs  page.rs  toast.rs  wal.rs  wal_storage.rs
src/types/: column.rs  data_type.rs  mod.rs  owned_value.rs  value.rs
tests/: constraints_cascade.rs  delete_benchmark.rs  grace_hash_join.rs  hnsw_integration.rs  hnsw_qdrant_comparison.rs  integration_sql.rs  large_blob_test.rs  memory_budget.rs  mvcc_concurrent.rs  mvcc_test.rs  prepared_statement_constraints.rs  query_memory_budget.rs  regression_smoke_test.rs  repro_toast.rs  secondary_index_maintenance.rs  semi_anti_join.rs  single_insert_benchmark.rs  sqlite_benchmark.rs  sqlite_import.rs  sqlite_prepared.rs  subquery_optimizer.rs  subquery_stress_test.rs  toast_large_table_test.rs  update_benchmark.rs  wal_durability.rs  wal_undo_logging.rs
tests/queries/: subquery_stress_test.sql
(+21 files in other folders)
