[package]
name = "turdb"
version = "0.1.0"
edition = "2021"
description = "High-performance embedded database with row storage and native vector search"
license = "MIT"

[dependencies]
eyre = "0.6"
parking_lot = "0.12"
memmap2 = "0.9"
zerocopy = { version = "0.8", features = ["derive"] }
bumpalo = { version = "3.14", features = ["collections"] }
smallvec = "1.11"
hashbrown = "0.14"
phf = { version = "0.11", features = ["macros"] }
crc = "3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "records"
harness = false

[[bench]]
name = "database"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true